# c-cpp

./: README.md
binaryTree/: CMakeLists.txt  README.md  run.sh
binaryTree/src/: main.cpp
c-libs/array/: CMakeLists.txt  README.md
c-libs/array/src/lib/: CMakeLists.txt  array.c  arrayUtil.c  carrayUtils.c
c-libs/complexNumbers/: CMakeLists.txt  README.md
c-libs/cstring/: .gitignore  CMakeLists.txt  Makefile  README.md
c-libs/hashSet/: CMakeLists.txt  README.md
c-libs/linalg/: CMakeLists.txt  README.md
c-libs/string/: CMakeLists.txt
c-libs/string/src/: main.c
c-libs/string/src/include/: mstring_utils.h
c-libs/string/src/lib/: mstring.c  mstring_utils.c
complexNumber/: .gitignore  CMakeLists.txt  README.md  run.sh
csvReader/: CMakeLists.txt  README.md
feedForwardNeuralNetwork/: CMakeLists.txt  README.md
feedForwardNeuralNetwork/data/: iris_mapped.csv
feedForwardNeuralNetwork/src/: main.cpp
feedForwardNeuralNetwork/src/include/: fnn.hpp
feedForwardNeuralNetwork/src/include/fnn/: dataset.hpp  fnn.hpp
feedForwardNeuralNetwork/src/include/linalg/: linalg.hpp  matrix.hpp  mtrx.hpp  vct.hpp  vector.hpp
feedForwardNeuralNetwork/src/lib/: CMakeLists.txt  fnn.cpp
feedForwardNeuralNetwork/src/lib/fnn/: CMakeLists.txt  dataset.cpp  fnn.cpp
feedForwardNeuralNetwork/src/lib/linalg/: CMakeLists.txt  linalg.cpp  matrix.cpp  mtrx.cpp  vct.cpp  vector.cpp
linearAlgebra/: CMakeLists.txt  README.md  main.cpp
linkedList/: CMakeLists.txt  README.md
queue/: .gitignore  CMakeLists.txt  README.md  run.sh
stack/: CMakeLists.txt  README.md
(+112 files in other folders)
